--- a/contact.html
+++ b/contact.html
@@ -54,17 +54,17 @@
     <div class="box">
       <i class="fas fa-map fa-3x"></i>
       <h3>Ubicación</h3>
-      <p>Av. Universidad s/n. Ciudad Universitaria San Nicolás de los Garza, Nuevo León, C.P. 66451</p>
+      <p>Calle Benito Juárez 893, Centro, 64000 Monterrey, N.L.</p>
     </div>
     <div class="box">
       <i class="fas fa-phone fa-3x"></i>
       <h3>Telefonos</h3>
-      <p>(81) 83-29-40-20</p>
+      <p>(81) 83-83-83-83</p>
     </div>
     <div class="box">
       <i class="fas fa-envelope fa-3x"></i>
       <h3>E-MAIL</h3>
-      <p>educont.fime@uanl.mx</p>
+      <p>Luis94cg@gmail.com</p>
     </div>
   </div>
 </section>
