--- a/video.html
+++ b/video.html
@@ -32,3 +32,7 @@
       <center>
         <h1>Vealo usted mismo.</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/W8Ni27um48I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="clr"></div>
+  <footer id="main-footer">
+    <p> MA &copy; 2019, Todos los derechos reservados</p>
+</footer>
