--- a/practica.html
+++ b/practica.html
@@ -109,3 +109,7 @@
       </div>
     </div>
 </section>
+<div class="clr"></div>
+  <footer id="main-footer">
+    <p> MA &copy; 2019, Todos los derechos reservados</p>
+</footer>
