--- a/contact.html
+++ b/contact.html
@@ -68,3 +68,7 @@
     </div>
   </div>
 </section>
+<div class="clr"></div>
+  <footer id="main-footer">
+    <p> MA &copy; 2019, Todos los derechos reservados</p>
+</footer>
