--- a/about.html
+++ b/about.html
@@ -50,3 +50,7 @@ Asi surguio mochilas antirrobo, que tras varios intentos se a producido un model
     </div>
 </section>
 <div class="clr"></div>
+<div class="clr"></div>
+  <footer id="main-footer">
+    <p> MA &copy; 2019, Todos los derechos reservados</p>
+</footer>
